fix(data-table): fix checkbox alignment on select

--- a/src/components/data-table/style/lumapps/_index.scss
+++ b/src/components/data-table/style/lumapps/_index.scss
@@ -119,7 +119,7 @@
 
         #{$self}--has-thumbnail #{$self}__row--is-enabled:hover &,
         #{$self}--is-selectable #{$self}__row--is-selected & {
-            display: flex;
+            display: inline-block;
         }
     }
 
